syntax = "proto3";
package cart;
option go_package = "services/cart";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

message AddToCartRequest {
  string title = 1;
  string content = 2;
}

message AddToCartResponse {
  string message = 1;
  Item data = 2;
}

message Item {
  string id = 1;
  string title = 2;
  string content = 3;
  string owner_id = 4 [(google.api.field_behavior) = IMMUTABLE, json_name = "owner_id"];
}

message GetCartRequest {

}

message GetCartResponse {
  string message = 1;
  repeated Item data = 2;
}

service CartService {

  rpc AddToCart(AddToCartRequest) returns (AddToCartResponse) {
    option (google.api.http) = {
      post: "/v1/carts",
      body: "*"
    };
  }

  rpc GetCart(GetCartRequest) returns (GetCartResponse) {
    option (google.api.http) = {
      get: "/v1/carts"
    };
  }
}